# embedded

./: .gitignore  CHANGELOG.md  CNAME  CONTRIBUTION.md  MANIFEST.in  Makefile  README.md  SCRIPTS.txt  TODO.md  energy_report.md  increment_version.py  project.sh  publish.sh  pytest.ini  requirements.txt  run.py  setup.cfg  setup.py  setup.py.bak  str.md  str2.md  tox.ini  version.sh
.github/workflow/: python-package.yml
examples/: EXAMPLES.c  README.md  analyze.py  analyze_example.py  comment_example.py  custom_comment_tool.py  deep_analyze_example.py  deploy_example.py  filter_example.py  filter_files.py  optimize_example.py  report_example.py
src/infrash_embedded/: __init__.py  __init__.py.bak  _version.py.bak  cli.py  comment.py  comment_helpers.py  deep_analyzer.py  filter.py  optimization.py
tests/: __init__.py  conftests.py  pyproject.toml  test_analyzer.py  test_cli.py
