[metadata]
name = infrash_embedded
version = attr: infrash_embedded._version.__version__
description = Energy optimization tool for embedded systems
long_description = file: README.md
long_description_content_type = text/markdown
author = Tom Softreck
author_email = info@softreck.dev
license = Apache License 2.0
license_file = LICENSE
url = https://github.com/infrash_embedded/infrash_embedded
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Embedded Systems
    Topic :: Software Development :: Quality Assurance

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    colorama>=0.4.4
    click>=8.0.0
    pycparser>=2.21
    typing-extensions>=4.0.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    energy-optimizer = infrash_embedded.cli:main

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist

[coverage:run]
source = infrash_embedded
omit =
    tests/*
    */site-packages/*